# MykhailApp

./: Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_09_19_1656-d62d0b28a428_database_init.py  2025_09_24_0847-92552ded4334_fix_nullable_in_user_birthday_date_set_.py  2025_10_27_1450-42cf3d5c5afd_new_user.py  2025_10_27_1509-6514cf7f7e5b_new_user.py  2025_10_27_1518-16dd375fd0f3_add_subscription.py  2025_10_27_1526-ef0cb6081af7_add_usersubscription.py  2025_10_27_1530-a1aed6f63184_add_usersubscription.py  2025_10_27_1535-c2401c2525b9_add_admin_model.py  2025_10_27_1544-ffd0dcba9c33_add_service_model.py  2025_10_27_1549-32e39f409c94_add_api_key_model.py  2025_10_27_1551-4a52a6a539ad_add_api_key_model.py  2025_10_27_1557-1d60d906fd49_add_payment_model.py  2025_11_03_1839-bdc551062b4a_add_source_and_laguage_in_user_model.py  2025_11_04_0707-95c10821b426_deleted_registered_at_last_login_at_is_.py  2025_11_04_0739-37f594bb972f_add_userservice_relation.py  2025_11_04_0758-81e77b50d882_add_userservice_relation.py
app/amqp/: __init__.py  queues.py
app/amqp/payment/: payment.py
app/amqp/subscriptions/: subscribers.py
app/amqp/users/: subscribers.py
app/api/: __init__.py
app/contracts/admin/: __init__.py  schemas.py
app/contracts/amqp/: __init__.py  base.py  payment.py  subscriptions.py  user.py
app/contracts/api_keys/: __init__.py  schemas.py
app/core/: database.py  security.py
app/services/: __init__.py  amqp_error_handler.py  crud.py  error_handlers.py  exceptions.py
(+37 files in other folders)
