[project]
name = "mykhailapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic[postgres]>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[uvicorn]>=0.116.1",
    "faststream[rabbit]>=0.5.48",
    "pydantic[email]>=2.11.9",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.36.0",
    "argon2-cffi>=25.1.0",
]
